--- a/blog/src/data/pages/business.mdx
+++ b/blog/src/data/pages/business.mdx
@@ -5,12 +5,10 @@ publish: true
 ---
 import ContactLink from "components/contact-link"
 
-### Why
-
 **Time to market** and superb **execution** are key for a tech startup to succed on a competitive world.  
-An organization's ability to learn from mistakes and pivot quickly enough, can be enabled by their development and operations teams if they share the right mindset, understand the business, and collaborate together thowards global goals.  
+An organization's ability to learn from mistakes and pivot quickly enough, can be enabled by their people if they share the right mindset, understand the business, and collaborate together thowards global goals.  
 
-### How
+<br/>
 
 As a human oriented full stack developer, inspired by devops principles, I work closely with remote teams to help organizations improve their streams of value, delivering **high quality software** through thoughtful planning, design and implementation of new features, refactor of legacy codebases, and automatization of existing workflows.
 
@@ -18,18 +16,16 @@ As a human oriented full stack developer, inspired by devops principles, I work 
 
 I have been fortunate enough, to work with excellent mentors and friends, who helped me realize that whatever solution I build, it should help my co-workers to excel at what they do best. That attitude drives more value to an organization, than thriving to be a rockstar coder, who writes code that no one understands except by its own author.  
 
-### Where
+<br/>
 
 I live in Montevideo, the capital city of Uruguay; A beautiful country in South America that nicely fits into **UTC-3 / EST+1**.  
 I live in a **strategic timezone**, which allows me to work remotely with US teams during normal working hours.  
 I've a prooven track of +6 years of experience as a remote developer working for distributed global companies, and +13 years of profesional experience.
 If you need help setting up a distributed team, I can help you with that too.  
 
-### Who
+<br/>
 
-I'm a software architect with +13 years of professional experience as a software developer.  
-I've been working for startups, in remote distributed teams for the last +7 years of my career.  
-I've an academic background in CS and psychology. But most of what I learned about software engineering comes from being an avid self learner.
+I've a significant academic background in computer science and psychology. But most of what I learned about software engineering comes from being an avid self learner.
 
 ### Let's talk
 
