updates to about page

--- a/blog/src/data/pages/about.mdx
+++ b/blog/src/data/pages/about.mdx
@@ -24,9 +24,11 @@ I've started this website to share thoughts on subjects such as:
 
 ### A walk down Memory Lane
 
-I've been interested in computers since I can remember; Starting to code as a hobbie when I was 14 years old in Visual Basic 4. I wrote a few useful programs for my dad, and I used to hang out with a friend of mine to learn coding together during endless nights.  
-I quickly felt in love with open source technologies and after a few weeks I was able to install my first Linux distro; Red Hat 4.2. I was 16 at that moment, and by then I dreamed about being a hacker. But to be honest I was only able to hack my high school teacher's password, besides a few other silly tricks.  
-At 18 I thought I needed to widen my point of view about life, so I made the decision to study psychology. A few years later I decided to get back into software development cause I just can't help it; love to write software.  
+I've been interested in computers since I can remember; Starting to code as a hobbie when I was 14 years old in Visual Basic 4. I wrote a useful program for my dad once with Visual Basic and SQLServer, a static website hosted in Geocities, a space invaders like game, and other silly apps whose code would get me fired if I ever write a program like that in these days.  
+I used to hang out with a friend of mine to learn coding together during endless nights, and was a member of UYLUG ( Uruguay Linux users group ).  
+I quickly felt in love with open source technologies and after a few weeks I was able to install my first Linux distro; Red Hat 4.2. I was 16 at that moment, and by then I dreamed about being a hacker. 
+But I was only able to hack my high school teacher's password, besides doing silly tricks with an archaic Motorola phone.  
+At 18 I thought I needed to widen my point of view about life, so I made the decision to study psychology. A few years later I decided to get back into software development cause I just can't help it; I love to write software, and the creative thinking required to build simple solutions to complex problems.  
 
 ### I am basically, but not exclusively
 
