updates to about page

--- a/blog/src/data/pages/business.mdx
+++ b/blog/src/data/pages/business.mdx
@@ -10,7 +10,7 @@ An organization's ability to learn from mistakes and pivot quickly enough, can b
 
 <br/>
 
-As a human oriented full stack developer, inspired by devops principles, I work closely with remote teams to help organizations improve their streams of value, delivering **high quality software** through thoughtful planning, design and implementation of new features, refactor of legacy codebases, and automatization of existing workflows.
+As a human oriented full stack developer, inspired by devops principles, I work closely with remote teams to help organizations improve their streams of value, delivering **high quality software** through thoughtful planning, design and implementation of new features, refactor of legacy codebases, automatization of existing workflows, and designing new software development processes.
 
 <br/>
 
