--- a/blog/src/data/pages/about.mdx
+++ b/blog/src/data/pages/about.mdx
@@ -24,7 +24,7 @@ I've started this website to share thoughts on subjects such as:
 
 ### A walk down Memory Lane
 
-I've been interested in computers since I can remember; Starting to code as a hobbie when I was 14 years old in Visual Basic 4. I wrote a useful program for my dad once with Visual Basic and SQLServer, a static website hosted in Geocities, a space invaders like game, and other silly apps whose code would get me fired if I ever write a program like that in these days.  
+I've been interested in computers since I can remember; Starting to code as a hobbie when I was 14 years old in Visual Basic 4. I wrote a useful program for my dad once with Visual Basic and SQLServer, a static website hosted in Geocities, a space invaders like game, an assembler program that freezed my computer, and other silly apps whose code would get me fired if I ever write a program like that in these days.  
 I used to hang out with a friend of mine to learn coding together during endless nights, and was a member of UYLUG ( Uruguay Linux users group ).  
 I quickly felt in love with open source technologies and after a few weeks I was able to install my first Linux distro; Red Hat 4.2. I was 16 at that moment, and by then I dreamed about being a hacker. 
 But I was only able to hack my high school teacher's password, besides doing silly tricks with an archaic Motorola phone.  
